syntax = "proto3";

package translation;

option go_package = "github.com/truesch/grpc_getting_started/proto/translations";

service Translation {
    rpc Translate(TranslationInput) returns (TranslationOutput);
}

message TranslationInput {
    string Text = 1;
    Languages SourceLang = 2;
    Languages TargetLang = 3;
    optional Vendors Vendor = 4;
}

message TranslationOutput {
    string Text = 1;
    Languages SourceLang = 2;
    Languages TargetLang = 3;
    int32 BilledChars = 4;
}

enum Languages {
    NONE = 0;
    DE = 1;
    ES = 2;
    CZ = 3;
    FA = 4;
    ZH = 5;
    EN = 6;
}

enum Vendors {
    GoogleTranslate = 0;
    DeepL = 1;
}
